tests/negative/symbols/uppercase_fn.orng
// uppercase_fn.orng:5:7: error: symbol `Lol` of type other than `Type` must start with a lowercase letter
// fn Lol() -> Int { 4 }
//      ^
// 
fn Lol() -> Int { 4 }